// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: <Button /> Next: should mount without exploding in disabled state 1`] = `
<Button
  className="next"
  condition={true}
  fn={[Function]}
  text="Next"
>
  <button
    className="next"
    disabled={true}
    onClick={[Function]}
  >
    Next
  </button>
</Button>
`;

exports[`Component: <Button /> Next: should mount without exploding in enabled state 1`] = `
<Button
  className="next"
  condition={false}
  fn={[Function]}
  text="Next"
>
  <button
    className="next"
    disabled={false}
    onClick={[Function]}
  >
    Next
  </button>
</Button>
`;

exports[`Component: <Button /> Pause: should mount without exploding  in disabled state 1`] = `
<Button
  className="pause"
  condition={true}
  fn={[Function]}
  text="Pause"
>
  <button
    className="pause"
    disabled={true}
    onClick={[Function]}
  >
    Pause
  </button>
</Button>
`;

exports[`Component: <Button /> Pause: should mount without exploding  in enabled state 1`] = `
<Button
  className="pause"
  condition={false}
  fn={[Function]}
  text="Pause"
>
  <button
    className="pause"
    disabled={false}
    onClick={[Function]}
  >
    Pause
  </button>
</Button>
`;

exports[`Component: <Button /> Prev: should mount without exploding  in disabled state 1`] = `
<Button
  className="prev"
  condition={true}
  fn={[Function]}
  text="Prev"
>
  <button
    className="prev"
    disabled={true}
    onClick={[Function]}
  >
    Prev
  </button>
</Button>
`;

exports[`Component: <Button /> Prev: should mount without exploding  in enabled state 1`] = `
<Button
  className="prev"
  condition={false}
  fn={[Function]}
  text="Prev"
>
  <button
    className="prev"
    disabled={false}
    onClick={[Function]}
  >
    Prev
  </button>
</Button>
`;

exports[`Component: <Button /> Start: should mount without exploding  in disabled state 1`] = `
<Button
  className="start"
  condition={true}
  fn={[Function]}
  text="Start"
>
  <button
    className="start"
    disabled={true}
    onClick={[Function]}
  >
    Start
  </button>
</Button>
`;

exports[`Component: <Button /> Start: should mount without exploding  in enabled state 1`] = `
<Button
  className="start"
  condition={false}
  fn={[Function]}
  text="Start"
>
  <button
    className="start"
    disabled={false}
    onClick={[Function]}
  >
    Start
  </button>
</Button>
`;

exports[`Component: <Button /> Stop: should mount without exploding  in disabled state 1`] = `
<Button
  className="stop"
  condition={true}
  fn={[Function]}
  text="Stop"
>
  <button
    className="stop"
    disabled={true}
    onClick={[Function]}
  >
    Stop
  </button>
</Button>
`;

exports[`Component: <Button /> Stop: should mount without exploding  in enabled state 1`] = `
<Button
  className="stop"
  condition={false}
  fn={[Function]}
  text="Stop"
>
  <button
    className="stop"
    disabled={false}
    onClick={[Function]}
  >
    Stop
  </button>
</Button>
`;
